--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "lint": "1.1.2",
     "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.6",
-    "npm-run-all": "4.1.3",
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-app-rewired": "1.6.2",
@@ -39,7 +38,7 @@
     "start-js": "react-app-rewired start",
     "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
     "build-js": "GENERATE_SOURCEMAP=false react-app-rewired build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm run build-css | npm run build-js",
     "run-test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore .",
