--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.4",
   "private": true,
   "dependencies": {
+    "@bit/mybit.ui.showcase.button": "^0.0.3",
+    "@bit/mybit.ui.showcase.tooltip": "^0.0.1",
     "antd": "3.10.9",
     "axios": "0.18.0",
     "bluebird": "3.5.3",
@@ -22,15 +24,15 @@
     "react": "16.6.3",
     "react-app-rewired": "1.6.2",
     "react-dom": "16.6.3",
+    "react-facebook-pixel": "0.1.1",
+    "react-ga": "2.5.6",
     "react-jazzicon": "0.1.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.0.5",
-    "web3": "1.0.0-beta.35",
-    "websocket": "1.0.28",
     "react-twitter-conversion-tracker": "1.0.0",
-    "react-facebook-pixel": "0.1.1",
-    "react-ga": "2.5.6",
-    "styled-components": "4.1.2"
+    "styled-components": "4.1.2",
+    "web3": "1.0.0-beta.35",
+    "websocket": "1.0.28"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
