--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "styled-components": "4.1.2",
     "web3": "1.0.0-beta.35",
     "websocket": "1.0.28",
-    "@mybit/network.js": "file:../network.js"
+    "@mybit/network.js": "file:./network.js"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
