--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.2.4",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.10.1",
     "antd": "3.10.9",
     "aws-sdk": "^2.366.0",
     "axios": "0.18.0",
+    "bizcharts": "^3.4.1",
     "bluebird": "3.5.3",
     "civic-sip-api": "^1.1.0",
     "classnames": "2.2.6",
