--- a/package.json
+++ b/package.json
@@ -49,14 +49,17 @@
     "run-test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore .",
-    "now-start": "node server.js",
-    "start-dev": "NODE_ENV=development nodemon --ignore ./src server.js",
-    "lint:fix": "eslint --ignore-path .gitignore --fix ."
+    "now-start": "npm run compile && node lib/index.js",
+    "start-dev": "NODE_ENV=development nodemon lib/index.js",
+    "lint:fix": "eslint --ignore-path .gitignore --fix .",
+    "compile": "rimraf lib/ && babel -d lib/ server/",
+    "compile-dev": "rimraf lib/ && NODE_ENV=development babel -d lib/ server/"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-inline-react-svg": "1.0.1",
-    "babel-runtime": "6.26.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel-plugin-inline-react-svg": "^1.0.1",
     "compression-webpack-plugin": "2.0.0",
     "cross-env": "5.2.0",
     "enzyme": "3.8.0",
