--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
+    "rimraf": "^2.6.3",
     "surge": "0.20.1",
     "ws": "6.1.2"
   },
