--- a/.babelrc
+++ b/.babelrc
@@ -55,7 +55,8 @@
         ["import", {"libraryName": "antd","style": "less"}],
         ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
         ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "static","baseUri": "/" }]
+        ["transform-assets-import-to-string", {"baseDir": "static","baseUri": "/" }],
+        ["transform-remove-console"]
       ]
     }
   }
