--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-jazzicon": "0.1.3",
     "react-router-dom": "^4.3.1",
     "react-twitter-conversion-tracker": "1.0.0",
+    "recompose": "^0.30.0",
     "styled-components": "4.1.3",
     "web3": "1.0.0-beta.37"
   },
