--- a/package.json
+++ b/package.json
@@ -6,43 +6,43 @@
     "terser": "3.14.1"
   },
   "dependencies": {
-    "@antv/data-set": "^0.10.1",
-    "@zeit/next-bundle-analyzer": "^0.1.2",
-    "@zeit/next-css": "^1.0.1",
-    "airtable": "^0.5.8",
+    "@antv/data-set": "0.10.1",
+    "@zeit/next-bundle-analyzer": "0.1.2",
+    "@zeit/next-css": "1.0.1",
+    "airtable": "0.5.8",
     "antd": "3.11.4",
-    "aws-sdk": "^2.366.0",
+    "aws-sdk": "2.366.0",
     "axios": "0.18.0",
-    "babel-plugin-import": "^1.11.0",
-    "babel-plugin-inline-react-svg": "^1.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
-    "babel-plugin-transform-assets-import-to-string": "^1.2.0",
-    "bizcharts": "^3.4.1",
-    "civic-sip-api": "^1.1.0",
+    "babel-plugin-import": "1.11.0",
+    "babel-plugin-inline-react-svg": "1.0.1",
+    "babel-plugin-styled-components": "1.10.0",
+    "babel-plugin-transform-assets-import-to-string": "1.2.0",
+    "bizcharts": "3.4.1",
+    "civic-sip-api": "1.1.0",
     "classnames": "2.2.6",
-    "compression": "^1.7.3",
-    "cors": "^2.8.5",
+    "compression": "1.7.3",
+    "cors": "2.8.5",
     "dayjs": "1.7.8",
     "detect-browser": "3.0.1",
     "dotenv": "6.2.0",
-    "dotenv-webpack": "^1.7.0",
+    "dotenv-webpack": "1.7.0",
     "express": "4.16.4",
     "gridlex": "2.7.1",
-    "less": "^3.9.0",
+    "less": "3.9.0",
     "lint": "1.1.2",
-    "multer": "^1.4.1",
-    "next": "^7.0.2",
+    "multer": "1.4.1",
+    "next": "7.0.2",
     "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.9",
     "prop-types": "15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "react-facebook-pixel": "0.1.1",
     "react-ga": "2.5.6",
     "react-jazzicon": "0.1.3",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "4.3.1",
     "react-twitter-conversion-tracker": "1.0.0",
-    "recompose": "^0.30.0",
+    "recompose": "0.30.0",
     "styled-components": "4.1.3",
     "web3": "1.0.0-beta.37"
   },
@@ -60,12 +60,12 @@
     "analyze:browser": "BUNDLE_ANALYZE=browser next build"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "babel-watch": "^7.0.0",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.2.3",
+    "babel-plugin-module-resolver": "3.2.0",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "babel-watch": "7.0.0",
     "compression-webpack-plugin": "2.0.0",
     "cross-env": "5.2.0",
     "enzyme": "3.8.0",
@@ -76,7 +76,7 @@
     "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "3.0.2",
     "react-hot-loader": "4.6.3",
-    "rimraf": "^2.6.3"
+    "rimraf": "2.6.3"
   },
   "browserslist": {
     "development": [
