--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "less": "3.9.0",
     "lint": "1.1.2",
     "multer": "1.4.1",
-    "next": "7.0.2",
+    "next": "8.0.3",
     "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.9",
     "prop-types": "15.6.2",
@@ -50,7 +50,7 @@
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
-    "dev": "NODE_ENV=development babel-watch --exclude .next server/index.js",
+    "dev": "NODE_ENV=development node lib/index.js",
     "build": "next build",
     "export": "next export -o build",
     "start": "NODE_ENV=production node lib/index.js",
