--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bizcharts": "3.4.1",
     "civic-sip-api": "1.1.0",
     "classnames": "2.2.6",
+    "color-hash": "^1.0.3",
     "compression": "1.7.3",
     "cors": "2.8.5",
     "dayjs": "1.7.8",
