--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "babel-plugin-transform-remove-console": "6.9.4",
     "babel-watch": "7.0.0",
     "compression-webpack-plugin": "2.0.0",
-    "cross-env": "5.2.0",
+    "cross-env": "^5.2.0",
     "enzyme": "3.8.0",
     "enzyme-adapter-react-16": "1.7.1",
     "eslint-config-airbnb": "17.1.0",
