--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "16.7.0",
     "react-facebook-pixel": "0.1.1",
     "react-ga": "2.5.6",
+    "react-geocode": "^0.1.2",
     "react-jazzicon": "0.1.3",
     "react-resize-detector": "^3.4.0",
     "react-router-dom": "4.3.1",
