--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "terser": "3.14.1"
   },
   "dependencies": {
+    "3box": "^1.8.5",
     "@antv/data-set": "0.10.1",
     "@mybit/network.js": "0.0.32",
     "@zeit/next-bundle-analyzer": "0.1.2",
