--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "compile-server": "rimraf lib/ && babel -d lib/ server/",
     "now-start": "npm run compile-server && npm run start",
-    "analyze": "BUNDLE_ANALYZE=both next build",
-    "analyze:server": "BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "BUNDLE_ANALYZE=browser next build"
+    "analyze": "cross-env BUNDLE_ANALYZE=both next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
