--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
-    "@mybit/network.js": "0.0.35",
+    "@mybit/network.js": "0.0.44",
     "@zeit/next-bundle-analyzer": "0.1.2",
     "@zeit/next-css": "1.0.1",
     "airtable": "0.5.8",
@@ -30,6 +30,7 @@
     "dotenv": "6.2.0",
     "dotenv-webpack": "1.7.0",
     "express": "4.16.4",
+    "ipfs-api": "^26.1.2",
     "js-cookie": "2.2.0",
     "less": "3.9.0",
     "lint": "1.1.2",
