--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ cache:
 install: true
 yarn: true
 script:
-  - GIT_HASH=$(git rev-parse --short HEAD)
-  - echo ${GIT_HASH} > version
-  - cp CONTRIBUTORS contributors
-  - BUILD_URL=$(npx now --name app.mybit.io -t $NOW_PROD_TOKEN)
-  - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app-staging.mybit.io -t $NOW_PROD_TOKEN; fi
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app.mybit.io -t $NOW_PROD_TOKEN; fi
+  - npm run build
+  - npm run export
+  - npx ipfs-deploy -p pinata -d cloudflare build
