--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "ipfs-http-client": "^33.1.0",
     "is-ipfs": "^0.6.1",
     "js-cookie": "2.2.0",
-    "next": "8.1.1-canary.51",
+    "next": "9.2.1",
     "prop-types": "15.7.2",
     "react": "16.8",
     "react-dom": "16.8",
@@ -39,7 +39,7 @@
     "react-scrollable-anchor": "^0.6.1",
     "recompose": "0.30.0",
     "styled-components": "4.1.3",
-    "web3": "1.0.0-beta.37"
+    "web3": "1.2.4"
   },
   "scripts": {
     "clean": "rm -rf .next",
