--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "babel-plugin-inline-react-svg": "1.1.1",
     "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-styled-components": "1.10.7",
-    "babel-plugin-transform-assets-import-to-string": "^1.2.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "bizcharts": "3.5.6",
     "color-hash": "1.0.3",
@@ -43,7 +42,6 @@
     "react-geocode": "0.2.1",
     "react-google-maps-loader": "4.2.6",
     "react-google-places-suggest": "3.9.2",
-    "react-hot-loader": "4.12.19",
     "react-jazzicon": "0.1.3",
     "react-media": "1.10.0",
     "react-resize-detector": "4.2.1",
@@ -55,7 +53,7 @@
     "clean": "rm -rf .next build",
     "dev": "cross-env NODE_ENV=development ANALYZE=false next dev -p 8081 -H 127.0.0.1 || true",
     "build": "cross-env NODE_ENV=production ANALYZE=false next build",
-    "export": "cross-env NODE_ENV=production ANALYZE=false next export -o build",
+    "export": "cross-env NODE_ENV=production ANALYZE=false next export",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
