--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,4 +11,6 @@ jobs:
             yarn install
             yarn run build
             yarn run export
-            if [[ `git branch --show-current` == 'master' ]]; then ipfs-deploy --no-open -p pinata -d cloudflare out; fi
+            if [[ "$CIRCLE_BRANCH" == "master" ]]; then
+              ipfs-deploy --no-open -p pinata -d cloudflare out
+            fi
