--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,13 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
       - image: circleci/node:11.15.0
-
-    working_directory: ~/repo
-
     steps:
       - checkout
-
-      - deploy:
-          name: Deploy to Now
+      - run:
+          name: Build the static site with next js
           command: |
-            GIT_HASH=$(git rev-parse --short HEAD)
-            SANITIZED_BRANCH=$(tr "/" "-" <<<$CIRCLE_BRANCH)
-            VERY_SANITIZED_BRANCH=$(tr "." "-" <<<$SANITIZED_BRANCH)
-            echo ${GIT_HASH} > version
-            cp CONTRIBUTORS contributors
-            BUILD_URL=$(npx now --name app.mybit.io -t $NOW_DEVELOPMENT_TOKEN --public)
-            npx now alias ${BUILD_URL} ${GIT_HASH}-app-mybit-io-dev -t $NOW_DEVELOPMENT_TOKEN
-            npx now alias ${BUILD_URL} ${VERY_SANITIZED_BRANCH}-app-mybit-io-dev -t $NOW_DEVELOPMENT_TOKEN
+            yarn install
+            yarn run build
+            yarn run export
