--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
+os: linux
 language: node_js
-node_js:
-  - "11.15"
 cache:
-  directories:
-  - node_modules
+  yarn: true
 install: true
-yarn: true
+banches:
+  only:
+    - master
 script:
-  - GIT_HASH=$(git rev-parse --short HEAD)
-  - echo ${GIT_HASH} > version
-  - cp CONTRIBUTORS contributors
-  - BUILD_URL=$(npx now --name app.mybit.io -t $NOW_PROD_TOKEN)
-  - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app-staging.mybit.io -t $NOW_PROD_TOKEN; fi
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app.mybit.io -t $NOW_PROD_TOKEN; fi
+  - yarn install
+  - yarn run build
+  - yarn run export
+  - ./node_modules/.bin/ipfs-deploy --no-open -p pinata -d cloudflare out
