--- a/package.json
+++ b/package.json
@@ -11,40 +11,26 @@
     "@mybit/network.js": "0.0.51",
     "@zeit/next-bundle-analyzer": "0.1.2",
     "@zeit/next-css": "1.0.1",
-    "airtable": "0.5.8",
     "antd": "3.13.6",
-    "aws-sdk": "2.366.0",
     "axios": "0.19.0",
     "babel-plugin-import": "1.11.0",
     "babel-plugin-inline-react-svg": "1.0.1",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-transform-assets-import-to-string": "1.2.0",
     "bizcharts": "3.4.1",
-    "civic-sip-api": "1.1.0",
-    "classnames": "2.2.6",
     "color-hash": "1.0.3",
-    "compression": "1.7.3",
-    "cors": "2.8.5",
     "dayjs": "1.8.8",
     "detect-browser": "4",
-    "dotenv": "6.2.0",
-    "dotenv-webpack": "1.7.0",
-    "express": "4.16.4",
     "ipfs-http-client": "^33.1.0",
     "is-ipfs": "^0.6.1",
     "js-cookie": "2.2.0",
     "less": "3.9.0",
     "lint": "1.1.2",
-    "multer": "1.4.1",
     "next": "8.1.1-canary.51",
-    "node-sass-chokidar": "1.3.4",
     "nodemon": "1.18.10",
-    "preact": "^10.0.0-beta.2",
     "prop-types": "15.7.2",
     "react": "16.8",
     "react-dom": "16.8",
-    "react-facebook-pixel": "0.1.2",
-    "react-ga": "2.5.6",
     "react-geocode": "0.1.2",
     "react-google-maps-loader": "4.2.5",
     "react-google-places-suggest": "3.7.1",
@@ -53,23 +39,17 @@
     "react-resize-detector": "3.4.0",
     "react-router-dom": "4.3.1",
     "react-scrollable-anchor": "^0.6.1",
-    "react-twitter-conversion-tracker": "1.0.0",
     "recompose": "0.30.0",
     "styled-components": "4.1.3",
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
-    "dev": "NODE_ENV=development node lib/index.js",
-    "build": "next build",
-    "export": "next export -o build",
-    "start": "NODE_ENV=production node lib/index.js",
-    "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "eslint --ignore-path .gitignore --fix .",
-    "compile-server": "rimraf lib/ && babel -d lib/ server/",
-    "now-start": "npm run compile-server && npm run start",
-    "analyze": "cross-env BUNDLE_ANALYZE=both next build",
-    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
+    "clean": "rm -rf .next out",
+    "dev": "cross-env NODE_ENV=development ANALYZE=false next dev -p 8081 -H 127.0.0.1 || true",
+    "build": "cross-env NODE_ENV=production ANALYZE=false next build",
+    "export": "cross-env NODE_ENV=production ANALYZE=false next export",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
@@ -80,8 +60,6 @@
     "babel-watch": "7.0.0",
     "compression-webpack-plugin": "2.0.0",
     "cross-env": "5.2.0",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.10.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
