--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-scrollable-anchor": "^0.6.1",
     "recompose": "0.30.0",
     "styled-components": "4.1.3",
+    "url-join": "^4.0.1",
     "web3": "1.0.0-beta.37"
   },
   "scripts": {
