--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "dependencies": {
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
-    "@mybit/network.js": "0.0.51",
-    "@zeit/next-bundle-analyzer": "0.1.2",
-    "@zeit/next-css": "1.0.1",
+    "@mybit/network.js": "0.0.52",
+    "@next/bundle-analyzer": "^9.2.2",
+    "@zeit/next-css": "^1.0.1",
     "antd": "3.13.6",
-    "axios": "0.19.0",
+    "axios": "0.19.2",
     "babel-plugin-import": "1.11.0",
     "babel-plugin-inline-react-svg": "1.0.1",
     "babel-plugin-styled-components": "1.10.0",
@@ -26,7 +26,7 @@
     "js-cookie": "2.2.0",
     "less": "3.9.0",
     "lint": "1.1.2",
-    "next": "8.1.1-canary.51",
+    "next": "9.2.2",
     "nodemon": "1.18.10",
     "prop-types": "15.7.2",
     "react": "16.8",
