--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "frontend",
   "version": "1.1.0",
   "private": true,
-  "resolutions": {
-    "terser": "3.14.1"
-  },
   "dependencies": {
     "3box": "^1.9.0",
     "@antv/data-set": "0.10.1",
@@ -42,7 +39,8 @@
     "recompose": "0.30.0",
     "styled-components": "4.1.3",
     "url-join": "^4.0.1",
-    "web3": "1.0.0-beta.37"
+    "web3": "1.0.0-beta.37",
+    "webpack": "^4.41.6"
   },
   "scripts": {
     "clean": "rm -rf .next out",
