--- a/package.json
+++ b/package.json
@@ -3,44 +3,48 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "3box": "^1.9.0",
+    "3box": "1.17.1",
     "@antv/data-set": "0.10.1",
+    "@hot-loader/react-dom": "^16.12.0",
     "@mybit/network.js": "0.0.52",
     "@next/bundle-analyzer": "^9.2.2",
-    "@zeit/next-css": "^1.0.1",
+    "@svgr/webpack": "^5.2.0",
+    "@types/react": "^16.9.23",
     "antd": "3.13.6",
-    "axios": "0.19.2",
-    "babel-plugin-import": "1.11.0",
-    "babel-plugin-inline-react-svg": "1.0.1",
-    "babel-plugin-styled-components": "1.10.0",
-    "babel-plugin-transform-assets-import-to-string": "1.2.0",
+    "axios": "^0.19.2",
     "bizcharts": "3.4.1",
     "color-hash": "1.0.3",
+    "cross-env": "5.2.0",
     "dayjs": "1.8.8",
     "detect-browser": "4",
-    "ipfs-http-client": "^33.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "ipfs": "^0.40.0",
     "is-ipfs": "^0.6.1",
     "js-cookie": "2.2.0",
-    "less": "3.9.0",
-    "lint": "1.1.2",
     "next": "9.2.2",
     "nodemon": "1.18.10",
     "prop-types": "15.7.2",
-    "react": "16.8",
-    "react-dom": "16.8",
-    "react-geocode": "0.1.2",
-    "react-google-maps-loader": "4.2.5",
-    "react-google-places-suggest": "3.7.1",
-    "react-jazzicon": "0.1.3",
-    "react-media": "1.9.2",
-    "react-resize-detector": "3.4.0",
-    "react-router-dom": "4.3.1",
+    "react": "^16.13",
+    "react-dom": "^16.13",
+    "react-geocode": "^0.2.1",
+    "react-google-maps-loader": "^4.2.6",
+    "react-google-places-suggest": "^3.9.2",
+    "react-hot-loader": "^4.12.19",
+    "react-jazzicon": "^0.1.3",
+    "react-media": "^1.10.0",
+    "react-resize-detector": "^4.2.1",
+    "react-router-dom": "^5.1.2",
     "react-scrollable-anchor": "^0.6.1",
     "recompose": "0.30.0",
+    "scryptsy": "^2.1.0",
     "styled-components": "4.1.3",
     "url-join": "^4.0.1",
-    "web3": "1.0.0-beta.37",
-    "webpack": "^4.41.6"
+    "webpack": "^4.42.0"
   },
   "scripts": {
     "clean": "rm -rf .next out",
@@ -49,23 +53,6 @@
     "export": "cross-env NODE_ENV=production ANALYZE=false next export",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
-  },
-  "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/preset-env": "7.2.3",
-    "babel-plugin-module-resolver": "3.2.0",
-    "babel-plugin-transform-remove-console": "6.9.4",
-    "babel-watch": "7.0.0",
-    "compression-webpack-plugin": "2.0.0",
-    "cross-env": "5.2.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "extract-text-webpack-plugin": "3.0.2",
-    "react-hot-loader": "4.6.3",
-    "rimraf": "2.6.3"
   },
   "browserslist": {
     "development": [
